Added Electrical file

--- a/Annexes.tex
+++ b/Annexes.tex
@@ -49,46 +49,46 @@
 
 \iffalse
 
-    %Anneau de LEDs
-    \includepdf[pages=-]{Annexes/anneau de Led.pdf}
+  %Anneau de LEDs
+  \includepdf[pages=-]{Annexes/anneau de Led.pdf}
 
-    % Boitier et composants d'alimentation
-    \includepdf[pages=-]{Annexes/Boitier alimentation}
-    \includepdf[pages=-]{Annexes/Arret d'urgence}
-    \includepdf[pages=-]{Annexes/Bouton d'alimentation}
-    \includepdf[pages=-]{Annexes/Bouton lumineux}
-    \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
-    \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
+  % Boitier et composants d'alimentation
+  \includepdf[pages=-]{Annexes/Boitier alimentation}
+  \includepdf[pages=-]{Annexes/Arret d'urgence}
+  \includepdf[pages=-]{Annexes/Bouton d'alimentation}
+  \includepdf[pages=-]{Annexes/Bouton lumineux}
+  \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
+  \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
 
-    % Encodeur
-    \includepdf[pages=-]{Annexes/Encodeur TMCS-20}
-    \includepdf[pages=-]{Annexes/Montage encodeur}
+  % Encodeur
+  \includepdf[pages=-]{Annexes/Encodeur TMCS-20}
+  \includepdf[pages=-]{Annexes/Montage encodeur}
 
-    % Roulements
-    \includepdf[pages=-]{Annexes/Roulement SKF W 61700 X-2RS1}
+  % Roulements
+  \includepdf[pages=-]{Annexes/Roulement SKF W 61700 X-2RS1}
 
-    % Moteur linéaire
-    \includepdf[pages=-]{Annexes/Moteur lineaire}
+  % Moteur linéaire
+  \includepdf[pages=-]{Annexes/Moteur lineaire}
 
-    % Driver Moteur
-    \includepdf[pages=-]{Annexes/EPOS4-Module-Compact}
+  % Driver Moteur
+  \includepdf[pages=-]{Annexes/EPOS4-Module-Compact}
 
-    % Règle linéaire
-    \includepdf[pages=-]{Annexes/Montage regle lineaire}
-    \includepdf[pages=-]{Annexes/Tete de lecture}
+  % Règle linéaire
+  \includepdf[pages=-]{Annexes/Montage regle lineaire}
+  \includepdf[pages=-]{Annexes/Tete de lecture}
 
-    % Pieds réglables
-    \includepdf[pages=-]{Annexes/Pieds reglable}
+  % Pieds réglables
+  \includepdf[pages=-]{Annexes/Pieds reglable}
 
-    %Mises en plans des pièces mécaniques
-    \includepdf[pages=-]{Annexes/Couplage Encodeur}
-    \includepdf[pages=-]{Annexes/Couplage Tige}
-    \includepdf[pages=-]{Annexes/Liaison chariot}
-    \includepdf[pages=-]{Annexes/Liaison Moteur}
-    \includepdf[pages=-]{Annexes/Support Amortisseur}
-    \includepdf[pages=-]{Annexes/Support Amortisseur 2}
-    \includepdf[pages=-]{Annexes/Support Guidage Cable}
-    \includepdf[pages=-]{Annexes/Support Pieds}
-    \includepdf[pages=-]{Annexes/Support Tete Lecture}
+  %Mises en plans des pièces mécaniques
+  \includepdf[pages=-]{Annexes/MEP Couplage Encodeur}
+  \includepdf[pages=-]{Annexes/MEP Couplage Tige}
+  \includepdf[pages=-]{Annexes/MEP Liaison chariot}
+  \includepdf[pages=-]{Annexes/MEP Liaison Moteur}
+  \includepdf[pages=-]{Annexes/MEP Support Amortisseur}
+  \includepdf[pages=-]{Annexes/MEP Support Amortisseur 2}
+  \includepdf[pages=-]{Annexes/MEP Support Guidage Cable}
+  \includepdf[pages=-]{Annexes/MEP Support Pieds}
+  \includepdf[pages=-]{Annexes/MEP Support Tete Lecture}
 
 \fi
