--- a/bibliography.bib
+++ b/bibliography.bib
@@ -150,6 +150,70 @@
   keywords = {Trinamic}
 }
 
+@online{Maxon,
+  author   = {Maxon},
+  title    = {Maxon},
+  url      = {https://www.maxongroup.com/maxon/view/content/index},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {Maxon}
+}
+
+@online{RaspberryPi,
+  author   = {RaspberryPi},
+  title    = {RaspberryPi},
+  url      = {https://www.raspberrypi.com/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {RaspberryPi}
+}
+
+@online{MEANWELL,
+  author   = {MEAN WELL},
+  title    = {MEAN WELL},
+  url      = {https://www.meanwell.com/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {MEAN WELL}
+}
+
+@online{XPPower,
+  author   = {XP Power},
+  title    = {XP Power},
+  url      = {https://www.xppower.com/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {XP Power}
+}
+
+@online{Schurter,
+  author   = {Schurter},
+  title    = {Schurter},
+  url      = {https://www.schurter.com/en},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {Schurter}
+}
+
+@online{IDEC,
+  author   = {IDEC},
+  title    = {IDEC},
+  url      = {https://eu.idec.com/idec-eu/fr/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {IDEC}
+}
+
+@online{EAO,
+  author   = {EAO},
+  title    = {EAO},
+  url      = {https://eao.com/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {EAO}
+}
+
+@online{Fibox,
+  author   = {Fibox},
+  title    = {Fibox},
+  url      = {https://www.fibox.ch/},
+  addendum = {(accessed: 16.06.2023)},
+  keywords = {Fibox}
+}
+
 % @article{einstein,
 %     author = "Albert Einstein",
 %     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
