--- a/report.tex
+++ b/report.tex
@@ -68,6 +68,9 @@
 \chapter{Mécanique}
 \input{Mecanique.tex}
 
+\chapter{Boîtier électrique}
+\input{BoitierElectrique.tex}
+
 \clearpage
 \printbibliography
 
