Ajout listes objets et annotations images

--- a/BoitierElectrique.tex
+++ b/BoitierElectrique.tex
@@ -41,3 +41,11 @@ ces connections sur le schéma suivant.
 La somme des largeurs des éléments est de 203~mm, la hauteur la plus grande est de 93~mm et la profondeur la plus élevée est de 58~mm. Le choix
 du boîtier se porte sur l'ABS 200/100 HG ENCLOSURE de chez Fibox \cite{Fibox} avec 171~mm de hauteur interne, 95~mm de profondeur interne et
 246~mm de largeur interne. Avec il y aussi la plaque de montage MIV 200 MOUNTING PLATE et le rail MIV 20 DIN-35 RAIL aussi de chez Fibox \cite{Fibox}.
+L'assemblage de ces pièces ressemble à ceci.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/AssemblageBoitierElectrique.png}
+    \caption{Boîtier électrique avec composants}
+    \label{fig:AssBoitierElec}
+\end{figure}
