--- a/Solutions.tex
+++ b/Solutions.tex
@@ -9,18 +9,18 @@ les pieds au reste de la structure est donc nécessaire. Cette dernière aura un
 une vis six pans creux à tête cylindrique qui se fixe sur le côté taraudé des profilés. Voici à quoi ressemble la pièce en question.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportPieds.png}
-  \caption{Représentation du support pour les pieds du système}
-  \label{fig:SupPieds}
+    \centering
+    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportPieds.png}
+    \caption{Représentation du support pour les pieds du système}
+    \label{fig:SupPieds}
 \end{figure}
 
 La structure complète avec les pieds et ses supports ressemble à ceci.
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/Structure.png}
-  \caption{Représentation de la structure en 3D}
-  \label{fig:DescStruct}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/Structure.png}
+    \caption{Représentation de la structure en 3D}
+    \label{fig:DescStruct}
 \end{figure}
 
 On peut voir que la structure utilise quatre grands profilés horizontaux, deux aux extrémités et deux au centre. Ce sera sur les deux profilés du centre que
@@ -39,19 +39,19 @@ acceptées s'il n'y a pas de meilleur offre.
 Les offres suivantes ont été faites par des entreprises contactées lors de ce travail.
 
 \begin{table}[H]
-  \centering
-  \caption{Offres pour le moteur linéaire}
-  \label{tab:OffreMot}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|}
-      \hline
-      Entreprise                                         & Prix                       & Délai de livraison              & Poids chariot        & Force continue \\ \hline
-      DD auto Tech \cite{DDautoTech}                     & 1105 CHF                   & \cellcolor{red}16 semaines      & 60~g                 & 39~N           \\ \hline
-      ESR Pollmeier \cite{ESRPollmeier}                  & \cellcolor{red}-           & \cellcolor{red}16 semaines      & \cellcolor{red}600~g & 29~N           \\ \hline
-      TDS Precision Products \cite{TDSPrecisionProducts} & 1020 CHF                   & \cellcolor{yellow}8-10 semaines & 180~g                & 26.4~N         \\ \hline
-      Heidenhain \cite{Heidenhain}/Etel \cite{Etel}      & \cellcolor{yellow}3000 CHF & 7 semaines                      & 100~g                & 31.9~N         \\ \hline
-    \end{tabular}%
-  }
+    \centering
+    \caption{Offres pour le moteur linéaire}
+    \label{tab:OffreMot}
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|l|l|l|l|l|}
+            \hline
+            \textbf{Entreprise}                                & \textbf{Prix}              & \textbf{Délai de livraison}     & \textbf{Poids chariot} & \textbf{Force continue} \\ \hline
+            DD auto Tech \cite{DDautoTech}                     & 1105 CHF                   & \cellcolor{red}16 semaines      & 60~g                   & 39~N                    \\ \hline
+            ESR Pollmeier \cite{ESRPollmeier}                  & \cellcolor{red}-           & \cellcolor{red}16 semaines      & \cellcolor{red}600~g   & 29~N                    \\ \hline
+            TDS Precision Products \cite{TDSPrecisionProducts} & 1020 CHF                   & \cellcolor{yellow}8-10 semaines & 180~g                  & 26.4~N                  \\ \hline
+            Heidenhain \cite{Heidenhain}/Etel \cite{Etel}      & \cellcolor{yellow}3000 CHF & 7 semaines                      & 100~g                  & 31.9~N                  \\ \hline
+        \end{tabular}%
+    }
 \end{table}
 
 L'offre la plus intéressante est celle de TDS Precision avec un prix raisonnable et un temps de livraison un peu plus long mais qui rentre dans le planning.
@@ -65,17 +65,17 @@ rail est plus lourd et encombrant que certaines des solutions commandables. Cela
 Les offres suivantes ont été faites par des entreprises contactées lors de ce travail.
 
 \begin{table}[H]
-  \centering
-  \caption{Offres pour le guidage linéaire avec mesure de position}
-  \label{tab:OffreGuidPos}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|}
-      \hline
-      Entreprise                       & Prix                             & Délai de livraison & Longueur & Poids chariot                 \\ \hline
-      Schneeberger \cite{Schneeberger} & \cellcolor[HTML]{FF0000}1369 CHF & 4 semaines         & 995~mm   & 84~g                          \\ \hline
-      Hiwin \cite{Hiwin}               & \cellcolor[HTML]{FF0000}1171 CHF & 3 semaines         & 1100~mm  & \cellcolor[HTML]{FF0000}420~g \\ \hline
-    \end{tabular}%
-  }
+    \centering
+    \caption{Offres pour le guidage linéaire avec mesure de position}
+    \label{tab:OffreGuidPos}
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|l|l|l|l|l|}
+            \hline
+            \textbf{Entreprise}              & \textbf{Prix}                    & \textbf{Délai de livraison} & \textbf{Longueur} & \textbf{Poids chariot}        \\ \hline
+            Schneeberger \cite{Schneeberger} & \cellcolor[HTML]{FF0000}1369 CHF & 4 semaines                  & 995~mm            & 84~g                          \\ \hline
+            Hiwin \cite{Hiwin}               & \cellcolor[HTML]{FF0000}1171 CHF & 3 semaines                  & 1100~mm           & \cellcolor[HTML]{FF0000}420~g \\ \hline
+        \end{tabular}%
+    }
 \end{table}
 
 L'offre la plus intéressante est celle de Schneeberger avec un chariot beaucoup plus léger, cependant le prix est trop élevé pour pouvoir considérer cette solution.
@@ -86,17 +86,17 @@ L'offre la plus intéressante est celle de Schneeberger avec un chariot beaucoup
 Les offres suivantes ont été faites par des entreprises contactées lors de ce travail.
 
 \begin{table}[H]
-  \centering
-  \caption{Offres pour le capteur pour la mesure de position}
-  \label{tab:OffrePos}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|}
-      \hline
-      Entreprise                   & Prix                             & Délai de livraison                  & Longueur                        & Poids tête                   \\ \hline
-      RLS \cite{RLS}               & \cellcolor[HTML]{FFFFFF}640 CHF  & \cellcolor[HTML]{FFFFFF}4 semaines  & \cellcolor[HTML]{FFFFFF}1000~mm & 32~g                         \\ \hline
-      Heidenhain \cite{Heidenhain} & \cellcolor[HTML]{FFFF00}1080 CHF & \cellcolor[HTML]{FF0000}16 semaines & \cellcolor[HTML]{FFFFFF}1040~mm & \cellcolor[HTML]{FFFFFF}20~g \\ \hline
-    \end{tabular}%
-  }
+    \centering
+    \caption{Offres pour le capteur pour la mesure de position}
+    \label{tab:OffrePos}
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|l|l|l|l|l|}
+            \hline
+            \textbf{Entreprise}          & \textbf{Prix}                    & \textbf{Délai de livraison}         & \textbf{Longueur}               & \textbf{Poids tête}          \\ \hline
+            RLS \cite{RLS}               & \cellcolor[HTML]{FFFFFF}640 CHF  & \cellcolor[HTML]{FFFFFF}4 semaines  & \cellcolor[HTML]{FFFFFF}1000~mm & 32~g                         \\ \hline
+            Heidenhain \cite{Heidenhain} & \cellcolor[HTML]{FFFF00}1080 CHF & \cellcolor[HTML]{FF0000}16 semaines & \cellcolor[HTML]{FFFFFF}1040~mm & \cellcolor[HTML]{FFFFFF}20~g \\ \hline
+        \end{tabular}%
+    }
 \end{table}
 
 \textbf{ - Guidage:}
@@ -104,19 +104,19 @@ Les offres suivantes ont été faites par des entreprises contactées lors de ce
 Les offres suivantes ont été faites par des entreprises contactées lors de ce travail.
 
 \begin{table}[H]
-  \centering
-  \caption{Offres pour le guidage}
-  \label{tab:OffreGuid1}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|}
-      \hline
-      Entreprise             & Prix             & Délai de livraison & Longueur & Poids chariot                 \\ \hline
-      Ewellix \cite{Ewellix} & \cellcolor{red}- & \cellcolor{red}-   & 995~mm   & \cellcolor[HTML]{FF0000}400~g \\ \hline
-      Rollon \cite{Rollon}   & \cellcolor{red}- & \cellcolor{red}-   & 1000~mm  & 170~g                         \\ \hline
-      Igus \cite{Igus}       & 130 CHF          & 10 jours           & 1100~mm  & \cellcolor[HTML]{FFFF00}260~g \\ \hline
-      Igus \cite{Igus}       & 150 CHF          & 2 jours            & 1100~mm  & \cellcolor[HTML]{FFFFFF}110~g \\ \hline
-    \end{tabular}%
-  }
+    \centering
+    \caption{Offres pour le guidage}
+    \label{tab:OffreGuid1}
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|l|l|l|l|l|}
+            \hline
+            \textbf{Entreprise}    & \textbf{Prix}    & \textbf{Délai de livraison} & \textbf{Longueur} & \textbf{Poids chariot}        \\ \hline
+            Ewellix \cite{Ewellix} & \cellcolor{red}- & \cellcolor{red}-            & 995~mm            & \cellcolor[HTML]{FF0000}400~g \\ \hline
+            Rollon \cite{Rollon}   & \cellcolor{red}- & \cellcolor{red}-            & 1000~mm           & 170~g                         \\ \hline
+            Igus \cite{Igus}       & 130 CHF          & 10 jours                    & 1100~mm           & \cellcolor[HTML]{FFFF00}260~g \\ \hline
+            Igus \cite{Igus}       & 150 CHF          & 2 jours                     & 1100~mm           & \cellcolor[HTML]{FFFFFF}110~g \\ \hline
+        \end{tabular}%
+    }
 \end{table}
 
 Les deux offres choisies sont donc la règle linéaire de RLS et le second rail linéaire de Igus. Le poids minime du chariot Igus est un avantage considérable
@@ -125,26 +125,26 @@ et le temps de livraison plus court chez RLS sont les facteurs clés de ce choix
 \subsubsection{C: Commander guidage linéaire et utiliser un capteur déjà en stock}
 \textbf{ - Capteur:}
 \newline
-Le capteur en stock est une règle linéaire LIDA 405 de 840mm de plage mesurable avec la tête de lecture et fixation. La seule partie à commander
+Le capteur en stock est une règle linéaire LIDA 405 de 840mm de plage mesurable avec la tête de lecture LIDA48 et fixation. La seule partie à commander
 est le support pour le ruban. Cette solution nécessite un temps de livraison inférieur à ceux des capteurs commandables et coute beaucoup moins cher.
 
 \textbf{ - Guidage:}
 \newline
 
 \begin{table}[H]
-  \centering
-  \caption{Offres pour le guidage}
-  \label{tab:OffreGuid2}
-  \resizebox{\textwidth}{!}{%
-    \begin{tabular}{|l|l|l|l|l|}
-      \hline
-      Entreprise             & Prix             & Délai de livraison & Longueur & Poids chariot                 \\ \hline
-      Ewellix \cite{Ewellix} & \cellcolor{red}- & \cellcolor{red}-   & 995~mm   & \cellcolor[HTML]{FF0000}400~g \\ \hline
-      Rollon \cite{Rollon}   & \cellcolor{red}- & \cellcolor{red}-   & 1000~mm  & 170~g                         \\ \hline
-      Igus \cite{Igus}       & 130 CHF          & 10 jours           & 1100~mm  & \cellcolor[HTML]{FFFF00}260~g \\ \hline
-      Igus \cite{Igus}       & 150 CHF          & 2 jours            & 1100~mm  & \cellcolor[HTML]{FFFFFF}110~g \\ \hline
-    \end{tabular}%
-  }
+    \centering
+    \caption{Offres pour le guidage}
+    \label{tab:OffreGuid2}
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|l|l|l|l|l|}
+            \hline
+            \textbf{Entreprise}    & \textbf{Prix}    & \textbf{Délai de livraison} & \textbf{Longueur} & \textbf{Poids chariot}        \\ \hline
+            Ewellix \cite{Ewellix} & \cellcolor{red}- & \cellcolor{red}-            & 995~mm            & \cellcolor[HTML]{FF0000}400~g \\ \hline
+            Rollon \cite{Rollon}   & \cellcolor{red}- & \cellcolor{red}-            & 1000~mm           & 170~g                         \\ \hline
+            Igus \cite{Igus}       & 130 CHF          & 10 jours                    & 1100~mm           & \cellcolor[HTML]{FFFF00}260~g \\ \hline
+            Igus \cite{Igus}       & 150 CHF          & 2 jours                     & 1100~mm           & \cellcolor[HTML]{FFFFFF}110~g \\ \hline
+        \end{tabular}%
+    }
 \end{table}
 
 Cette solution utilisera la règle linéaire de chez Heidenhain en stock et le second rail Igus grâce au poids minime de son chariot.
@@ -160,17 +160,17 @@ règle linéaire de chez Heidenhain \cite{Heidenhain} appartenant déjà à la H
 éléments peut être observé sur les figures suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = \textwidth]{assets/figures/VueFace.png}
-  \caption{Représentation de la structure en 3D de face avec l'ajout des éléments des solutions}
-  \label{fig:VueFace}
+    \centering
+    \includegraphics[width = \textwidth]{assets/figures/VueFace.png}
+    \caption{Représentation de la structure en 3D de face avec l'ajout des éléments des solutions}
+    \label{fig:VueFace}
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = \textwidth]{assets/figures/VueDerriere.png}
-  \caption{Représentation de la structure en 3D de derrière avec l'ajout des éléments des solutions}
-  \label{fig:VueDerriere}
+    \centering
+    \includegraphics[width = \textwidth]{assets/figures/VueDerriere.png}
+    \caption{Représentation de la structure en 3D de derrière avec l'ajout des éléments des solutions}
+    \label{fig:VueDerriere}
 \end{figure}
 
 \section{Autres éléments}\label{sec:AutreEle}
@@ -183,7 +183,7 @@ Le choix s'est porté sur le capteur SME-8M-ZS-24V-K-2,5-OE de Festo \cite{Festo
 
 \subsection{Amortisseurs}
 Il y a aussi besoin d'amortisseurs en bout de course au cas où le chariot arriverait trop vite pour s'arrêter. Des amortisseurs RB1007 taille M10
-de Festo \cite{Festo} ont été choisis à cette fin.
+de SMC \cite{SMC} ont été choisis à cette fin.
 
 \subsection{Chaîne porte câble}
 Une chaîne porte câble pour guider les câbles qui doivent bouger avec le système. Igus \cite{Igus} possède une grande variété de choix dans
