--- a/bibliography.bib
+++ b/bibliography.bib
@@ -214,6 +214,22 @@
   keywords = {Fibox}
 }
 
+@online{SMC,
+  author   = {SMC},
+  title    = {SMC},
+  url      = {https://www.smc.eu/fr-ch},
+  addendum = {(accessed: 18.06.2023)},
+  keywords = {SMC}
+}
+
+@online{SKF,
+  author   = {SKF},
+  title    = {SKF},
+  url      = {https://www.skf.com/ch/fr},
+  addendum = {(accessed: 18.06.2023)},
+  keywords = {SKF}
+}
+
 % @article{einstein,
 %     author = "Albert Einstein",
 %     title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
