--- a/report.tex
+++ b/report.tex
@@ -71,6 +71,9 @@
 \chapter{Boîtier électrique}
 \input{BoitierElectrique.tex}
 
+\chapter{Liste de matériel}
+\input{ListeMateriel.tex}
+
 \clearpage
 \printbibliography
 
