--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -29,11 +29,11 @@ Suivant le cas d'utilisation illustré supra, les besoins identifiés de l'HEIG-
     \label{tab:BesoinsHEIG}
     \begin{tabular}{|l|l|}
         \hline
-        \# & Besoin                                                            \\ \hline
-        N1 & Intéresser de potentiels futurs   étudiants au métier d'ingénieur \\ \hline
-        N2 & Disposer d'un système simple à   mettre en œuvre                  \\ \hline
-        N3 & Assurer la sécurité des visiteurs   et des exposants              \\ \hline
-        N4 & Présenter le domaine de la   régularisation numérique             \\ \hline
+        \textbf{\#} & \textbf{Besoin}                                                   \\ \hline
+        N1          & Intéresser de potentiels futurs   étudiants au métier d'ingénieur \\ \hline
+        N2          & Disposer d'un système simple à   mettre en œuvre                  \\ \hline
+        N3          & Assurer la sécurité des visiteurs   et des exposants              \\ \hline
+        N4          & Présenter le domaine de la   régularisation numérique             \\ \hline
     \end{tabular}
 \end{table}
 
@@ -45,10 +45,10 @@ Suivant le cas d'utilisation illustré supra, les besoins identifiés du visiteu
     \label{tab:BesoinsVis}
     \begin{tabular}{|l|l|}
         \hline
-        \# & Besoin                                             \\ \hline
-        N5 & Se familiariser sur le sujet de la   régulation.   \\ \hline
-        N6 & Se divertir à l'aide d'une   démonstration.        \\ \hline
-        N7 & Découvrir le domaine des sciences   de l'ingénieur \\ \hline
+        \textbf{\#} & \textbf{Besoin}                                    \\ \hline
+        N5          & Se familiariser sur le sujet de la   régulation.   \\ \hline
+        N6          & Se divertir à l'aide d'une   démonstration.        \\ \hline
+        N7          & Découvrir le domaine des sciences   de l'ingénieur \\ \hline
     \end{tabular}
 \end{table}
 
@@ -62,16 +62,16 @@ On détermine les fonctions suivantes dans le tableau \ref{tab:Fonctions} à par
     \resizebox{\textwidth}{!}{%
         \begin{tabular}{|l|l|l|}
             \hline
-            \# & Fonctions système                                                                              & Besoin    \\ \hline
-            F1 & Doit pouvoir tenir en équilibre                                                                & N5.1/N6.2 \\ \hline
-            F2 & Doit pouvoir être autonome                                                                     & N5.1/N6.2 \\ \hline
-            F3 & Doit pouvoir se mettre en équilibre tout seul depuis la position de repos                      & N5.1/N6.2 \\ \hline
-            F4 & Doit permettre aux visiteurs d'effectuer des actions programmées sur le pendule.               & N5.1      \\ \hline
-            F5 & Doit permettre aux visiteurs de déséquilibrer le système.                                      & N5.1      \\ \hline
-            F6 & Doit expliquer aux visiteurs comment fonctionne le système.                                    & N5.1/N6.1 \\ \hline
-            F7 & Doit pouvoir tenir sur une table.                                                              & N5.2      \\ \hline
-            F8 & Doit pouvoir être alimenté facilement.                                                         & N5.2      \\ \hline
-            F9 & Doit respecter les normes EN ISO 12100 de la SUVA \cite{NormeISO} sur la sécurité des machines & N5.3      \\ \hline
+            \textbf{\#} & \textbf{Fonctions système}                                                                     & \textbf{Besoin} \\ \hline
+            F1          & Doit pouvoir tenir en équilibre                                                                & N5.1/N6.2       \\ \hline
+            F2          & Doit pouvoir être autonome                                                                     & N5.1/N6.2       \\ \hline
+            F3          & Doit pouvoir se mettre en équilibre tout seul depuis la position de repos                      & N5.1/N6.2       \\ \hline
+            F4          & Doit permettre aux visiteurs d'effectuer des actions programmées sur le pendule.               & N5.1            \\ \hline
+            F5          & Doit permettre aux visiteurs de déséquilibrer le système.                                      & N5.1            \\ \hline
+            F6          & Doit expliquer aux visiteurs comment fonctionne le système.                                    & N5.1/N6.1       \\ \hline
+            F7          & Doit pouvoir tenir sur une table.                                                              & N5.2            \\ \hline
+            F8          & Doit pouvoir être alimenté facilement.                                                         & N5.2            \\ \hline
+            F9          & Doit respecter les normes EN ISO 12100 de la SUVA \cite{NormeISO} sur la sécurité des machines & N5.3            \\ \hline
         \end{tabular}%
     }
 \end{table}
@@ -94,31 +94,31 @@ Les fonctions sont disposées dans un diagramme FAST (c.f. Figure \ref{fig:AnalF
     \resizebox{\textwidth}{!}{%
         \begin{tabular}{|l|l|l|l|}
             \hline
-            \#                                                                                                                      & Exigence                                                                & Valeur attendue  & Fonction \\ \hline
-            R1                                                                                                                      & Le système tient en équilibre tant qu'il est alimenté                   & Vrai             & F7.1     \\ \hline
-            R2                                                                                                                      & Le système retourne vers le centre lorsqu'il n'est pas perturbé         & Vrai             & F7.2     \\ \hline
+            \textbf{\#}                                                                                                             & \textbf{Exigence}                                                       & \textbf{Valeur attendue} & \textbf{Fonction} \\ \hline
+            R1                                                                                                                      & Le système tient en équilibre tant qu'il est alimenté                   & Vrai                     & F7.1              \\ \hline
+            R2                                                                                                                      & Le système retourne vers le centre lorsqu'il n'est pas perturbé         & Vrai                     & F7.2              \\ \hline
             R3                                                                                                                      &
             Le système est capable de se mettre en équilibre seul, à partir de sa position de repos                                 &
             Vrai                                                                                                                    &
-            F7.3                                                                                                                                                                                                                            \\ \hline
-            R4                                                                                                                      & Temps d'amorçage de maximum 10 secondes                                 & \textless{}=10s  & F7.3     \\ \hline
-            R5                                                                                                                      & Au moins 2 des 4 actions suivantes doivent être implémentées            & \textgreater{}=2 & F7.4     \\ \hline
-            R6                                                                                                                      & Le pendule effectue un tour complet et reste équilibré                  & Vrai             & F7.4     \\ \hline
-            R7                                                                                                                      & Déplacement de bout en bout avec le pendule penché                      & Vrai             & F7.4     \\ \hline
-            R8                                                                                                                      & Le pendule s'arrête un moment et s'amorce d'un seul coup sec            & Vrai             & F7.4     \\ \hline
+            F7.3                                                                                                                                                                                                                                             \\ \hline
+            R4                                                                                                                      & Temps d'amorçage de maximum 10 secondes                                 & \textless{}=10s          & F7.3              \\ \hline
+            R5                                                                                                                      & Au moins 2 des 4 actions suivantes doivent être implémentées            & \textgreater{}=2         & F7.4              \\ \hline
+            R6                                                                                                                      & Le pendule effectue un tour complet et reste équilibré                  & Vrai                     & F7.4              \\ \hline
+            R7                                                                                                                      & Déplacement de bout en bout avec le pendule penché                      & Vrai                     & F7.4              \\ \hline
+            R8                                                                                                                      & Le pendule s'arrête un moment et s'amorce d'un seul coup sec            & Vrai                     & F7.4              \\ \hline
             R9                                                                                                                      &
             Le chariot fait des mouvements de plus en plus amples pour rester en équilibre puis redevient graduellement plus stable &
             Vrai                                                                                                                    &
-            F7.4                                                                                                                                                                                                                            \\ \hline
-            R10                                                                                                                     & Le système est capable de se rééquilibrer après une légère perturbation & Vrai             & F7.5     \\ \hline
+            F7.4                                                                                                                                                                                                                                             \\ \hline
+            R10                                                                                                                     & Le système est capable de se rééquilibrer après une légère perturbation & Vrai                     & F7.5              \\ \hline
             R11                                                                                                                     &
             Les dimensions du système doivent rentrer dans un volume de 1400mm de largeur, 700mm de profondeur et 1000mm de hauteur &
             Vrai                                                                                                                    &
-            F7.7                                                                                                                                                                                                                            \\ \hline
-            R12                                                                                                                     & Le système reste stable sur la table, même en fonctionnement            & Vrai             & F7.7     \\ \hline
-            R13                                                                                                                     & Le système peut être branché sur une prise 230V Suisse classique        & Vrai             & F7.8     \\ \hline
-            R14                                                                                                                     & Le système ne doit pas laisser la possibilité de se coincer les doigts  & Vrai             & F7.9     \\ \hline
-            R15                                                                                                                     & Le système possède un arrêt d'urgence                                   & Vrai             & F7.9     \\ \hline
+            F7.7                                                                                                                                                                                                                                             \\ \hline
+            R12                                                                                                                     & Le système reste stable sur la table, même en fonctionnement            & Vrai                     & F7.7              \\ \hline
+            R13                                                                                                                     & Le système peut être branché sur une prise 230V Suisse classique        & Vrai                     & F7.8              \\ \hline
+            R14                                                                                                                     & Le système ne doit pas laisser la possibilité de se coincer les doigts  & Vrai                     & F7.9              \\ \hline
+            R15                                                                                                                     & Le système possède un arrêt d'urgence                                   & Vrai                     & F7.9              \\ \hline
         \end{tabular}%
     }
 \end{table}
